更改图片位置

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -5,20 +5,19 @@
 .vp-blog-hero-description {
   color: #333333;
 }
-.vp-hero-info-wrapper{
-  height: 85vh;
-}
+// .vp-hero-info-wrapper{
+//   height: 85vh;
+// }
 //.vp-hero-info {
 //  display: flex;
 //  justify-content: center; /* 水平居中 */
 //  align-items: center;     /* 垂直居中 */
 //  height: 100%;            /* 如果需要在整个容器内居中 */
 //}
-
-.vp-page.vp-portfolio-home {
-  overflow: hidden;
-  height: 20vh;
-}
+// .vp-page.vp-portfolio-home {
+//   overflow: hidden;
+//   height: 20vh;
+// }
 .vp-portfolio-avatar{
   align-items: center;     /* 垂直居中 */
 }
